fixed navbar z-index and link colors

--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ h1, h2, h3, h4, h5, h6 {
   background: #fff;
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 4;
 }
 
 #main-nav .container {
@@ -294,6 +294,10 @@ h1, h2, h3, h4, h5, h6 {
 *********************/
 #main-footer {
   background: var(--dark-color);
+  color: #fff;
+}
+
+#main-footer ul li a {
   color: #fff;
 }
 
